--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /cliente/dist/
+/clienteLogin/cliente/build/
+/clienteLogin/cliente/nbproject/private/
+/clienteLogIn/build/
+/clienteLogIn/nbproject/private/
+/clienteLogIn/dist/
